--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-virtualized": "^9.22.5",
+    "recharts": "^2.15.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "workbox-webpack-plugin": "^7.0.0",
@@ -66,6 +67,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "@types/recharts": "^1.8.29",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6"
